--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Mobile App</title>
+<title>Insert title here</title>
+<link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-Hi Vinayak , Welcome to the Mobile World
+<div id="base_container"></div>
 </body>
 </html>
