--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 </head>
 <body>
 <div id="base_container"></div>
-<script type="text/javascript" src="/index_bundle.js"></script><script type="text/javascript" src="/index_bundle.js"></script></body>
+<script type="text/javascript" src="/index_bundle.js"></script><script type="text/javascript" src="/index_bundle.js"></script><script type="text/javascript" src="/index_bundle.js"></script><script type="text/javascript" src="/index_bundle.js"></script></body>
 </html>
