--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
 </head>
 <body>
 <div id="base_container"></div>
-</html>
+</html><script type="text/javascript" src="/builder/index_bundle.js"></script>
